--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -2,24 +2,28 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
+
+  @include line-height(16,18,20,29.64);
+  @include font-size(16,20);
 }
 
 .form__section {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  column-gap: 80px;
 }
 
 @media (min-width: $desktop-width) {
   .form__section {
-    flex-direction: row;
-    justify-content: space-between;
-    column-gap: 20%;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
 .form input,
 .form textarea {
   text-transform: uppercase;
+  font-family: $font__main;
+  font-size: 1rem;
+  line-height: 18px;
 }
 
 .form__submit {
@@ -33,6 +37,13 @@
   .form__submit {
     flex-direction: row;
   }
+}
+
+.form__span {
+  font-family: $font__standard;
+
+  @include line-height(14,16,16,16);
+  @include font-size(14,16);
 }
 
 @media (min-width: $tablet-width) {
