--- a/source/sass/blocks/main-link.scss
+++ b/source/sass/blocks/main-link.scss
@@ -6,10 +6,18 @@
   background-color: $color__green;
   text-transform: uppercase;
   border: none;
+  padding-top: 13px;
+  padding-bottom: 13px;
 
+  @include font-size(16,20);
+  @include line-height(16,20,20,20);
   @include link(white);
 }
 
+.main-link--smaller-text {
+  @include font-size(14,20);
+  @include line-height(14,18,20,20);
+}
 
 .main-link--discreet {
   background-color: $color__grey;
