--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -1,8 +1,3 @@
-/*@media (min-width: $tablet-width) and (max-width: $desktop-width) {
-  .product {
-    padding: 34px 36px 39px 36px;
-  }
-}*/
 
 .product__button {
   grid-column: 1 / -1;
@@ -10,6 +5,10 @@
 
 .product__title {
   text-transform: uppercase;
+  font-weight: 400;
+
+  @include line-height(16,20,20,24);
+  @include font-size(16,20);
 }
 
 @media (min-width: $tablet-width) {
@@ -22,6 +21,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  font-family: $font__standard;
+  font-weight: 400;
+
+  @include line-height(12,16,16,16);
+  @include font-size(12,16);
 }
 
 @media (min-width: $tablet-width) {
@@ -35,4 +39,22 @@
   flex-direction: column;
 
   @include reset-list();
+}
+
+.product__value {
+  font-weight: 400;
+}
+
+.product-block__title {
+  font-weight: 400;
+
+  @include line-height(16,20,20,22);
+  @include font-size(16,20);
+}
+
+.product__description {
+  font-family: $font__standard;
+
+  @include line-height(12,16,16,18);
+  @include font-size(12,16);
 }
