--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -1,3 +1,10 @@
+.workflow__title {
+  font-weight: 400;
+
+  @include line-height(36, 40, 60, 60);
+  @include font-size(36, 60);
+}
+
 .workflow__list {
   display: grid;
   counter-reset: li;
@@ -35,14 +42,19 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  font-family: $font__standard;
+
+  @include line-height(14, 18, 16, 24);
+  @include font-size(14, 16);
 
   &::before {
+    position: absolute;
     display: block;
-    width: 60px;
     height: 60px;
-    margin-right: 20px;
     content: "";
     background-color: $color__green;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   &::after {
@@ -52,11 +64,9 @@
     counter-increment: li;
     content: counter(li);
     font-weight: inherit;
-
     color: #f2f2f2;
     z-index: -1;
     font-size: 16px;
-
     display: flex;
     width: 150px;
     padding: 0;
@@ -64,9 +74,47 @@
   }
 }
 
+@media (max-width: $tablet-width) {
+  .workflow__item {
+    display: block;
+    box-sizing: border-box;
+    padding-left: 80px;
+    padding-bottom: 20px;
+    min-height: 60px;
+
+    &::before {
+      top: 0;
+      left: 0;
+      width: 60px;
+    }
+  }
+}
+
 @media (min-width: $tablet-width) {
   .workflow__item {
     flex-direction: column;
     height: 280px;
+
+    &::before {
+      width: 80px;
+      height: 80px;
+    }
   }
+}
+
+//block background-images
+.workflow__item--health::before {
+  background-image: url("../img/svg/icon_leaf.svg");
+}
+
+.workflow__item--brew::before {
+  background-image: url("../img/svg/icon_tub.svg");
+}
+
+.workflow__item--change::before {
+  background-image: url("../img/svg/icon_eat.svg");
+}
+
+.workflow__item--profit::before {
+  background-image: url("../img/svg/icon_alarm.svg");
 }
