--- a/source/sass/blocks/demo-slider.scss
+++ b/source/sass/blocks/demo-slider.scss
@@ -1,10 +1,28 @@
 .demo-slider {
   position: relative;
+  box-sizing: border-box;
+  padding-bottom: 42px;
+}
+
+@media (min-width: $tablet-width) {
+  .demo-slider {
+    padding-top: 50px;
+    padding-bottom: 38px;
+    left: 14px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .demo-slider {
+    left: 0;
+    margin-top: -90px;
+  }
 }
 
 .demo-slider__cat {
   display: flex;
   justify-content: center;
+  padding-bottom: 10px;
 }
 
 @media (min-width: $tablet-width) {
@@ -13,8 +31,12 @@
   }
 }
 
-@media (max-width: $tablet-width) {
+.cats-static {
+  display: none;
+}
+
+@media (min-width: $tablet-width) {
   .cats-static {
-    display: none;
+    display: block;
   }
 }
