--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -1,10 +1,40 @@
+.demo-cat {
+  box-sizing: border-box;
+  padding: 25px 0 26px 0;
+}
+
+@media (min-width: $desktop-width) {
+  .demo-cat {
+    box-sizing: border-box;
+    padding: 25px 0 26px 0;
+  }
+}
+
+.demo-cat {
+  box-sizing: border-box;
+  padding: 5px 0 26px 0;
+}
 
 .demo-cat__title {
+  box-sizing: border-box;
   color: $color__black;
   font-weight: 400;
+  margin: 0 0 41px 0;
 
   @include line-height(36,40,60,60);
   @include font-size(36,60);
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__title {
+    margin: 0 0 66px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .demo-cat__title {
+    margin: 0 0 147px 0;
+  }
 }
 
 .demo-cat__subtitle {
@@ -13,57 +43,182 @@
 
   @include line-height(14,18,16,24);
   @include font-size(14,16);
+  padding-bottom: 20px;
+  margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__subtitle {
+    padding: 0 30px 52px 0;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .demo-cat__subtitle {
+    width: 69%;
+    padding: 0 30px 69px 0;
+  }
+}
+
+@media (min-width: $tablet_width) {
+  .demo-cat__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .demo-cat__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    row-gap: 52px;
+  }
 }
 
 .demo-cat__list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 0 16px 0;
 
   @include reset-list();
 }
 
-@media (min-width: $tablet_width) and (max-width: $desktop-width) {
+@media (min-width: $tablet_width) {
   .demo-cat__list {
-    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-between;
+    width: 52%;
+  }
+}
+
+@media (min-width: $tablet_width) {
+  .demo-cat__list {
+    justify-content: space-between;
+    width: 58%;
   }
 }
 
 .demo-cat__item {
+  position: relative;
+  justify-self: center;
   display: flex;
+  border: 1px solid $color__light-grey;
+  border-radius: 3px;
   flex-direction: column;
   align-items: center;
+  width: 122px;
 }
 
-.demo-cat__item--wide {
-  grid-column: 1 / -1;
-  text-transform: uppercase;
-
-  @include line-height(14,20,20,20);
-  @include font-size(14,20);
+@media (min-width: $tablet-width) {
+  .demo-cat__item {
+    width: 162px;
+  }
 }
 
 @media (min-width: $tablet_width) and (max-width: $desktop-width) {
   .demo-cat__item--wide {
     grid-column: 3;
+    margin-left: 10px;
+    align-items: flex-end;
   }
 }
 
 .demo-cat__importance {
   position: relative;
+  padding: 13px 0 16px 0;
+  box-sizing: border-box;
+  text-transform: uppercase;
   font-weight: 400;
+
 
   @include line-height(24,24,30,37);
   @include font-size(24,30);
 }
 
+@media (min-width: $tablet-width) {
+  .demo-cat__importance {
+    padding: 15px 0 16px 0;
+  }
+}
+
 .demo-cat__description {
+  position: absolute;
+  top: 44px;
+  z-index: 2;
+  padding: 0 10px;
+  background-color: $color__grey;
+  margin: 0;
+  text-align: center;
   font-family: $font__standard;
 
   @include line-height(12,12,14,14);
   @include font-size(12,14);
 }
 
+@media (min-width: $tablet-width) {
+  .demo-cat__description br {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__description {
+    top: 64px;
+  }
+}
 
 .demo-cat__expenses {
+  margin: 0;
   text-align: center;
+
+
+  @include line-height(14,20,20,20);
+  @include font-size(14,20);
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__expenses {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__cost {
+    margin: 0 0 10px 0;
+
+    @include line-height(14,20,20,20);
+    @include font-size(14,20);
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__cost {
+    margin-left: 64px;
+  }
+}
+
+
+.demo-cat__total {
+  text-transform: uppercase;
+  text-align: right;
+}
+
+@media (max-width: $tablet-width - 1px) {
+  .demo-cat__total {
+    display: flex;
+    align-items: center;
+    padding: 28px 10px 15px 10px;
+    justify-content: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .demo-cat__total {
+    display: flex;
+    align-items: baseline;
+  }
 }
