--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,7 +2,17 @@
   position: relative;
 }
 
-.footer__map {
-  width: 320px;
-  margin: 0 auto;
+.footer__map{
+  height: 362px;
+}
+
+@media (min-width: $tablet-width) {
+  .footer__map {
+    height: 400px;
+  }
+}
+
+
+.footer__map iframe {
+  display: block;
 }
