--- a/source/sass/blocks/promo-outer.scss
+++ b/source/sass/blocks/promo-outer.scss
@@ -1,6 +1,6 @@
 .promo-outer {
-
-  background-image: linear-gradient(to top, #ffffff 195px, transparent 195px), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+  padding-bottom: 20px;
+  background-image: linear-gradient(to top, #ffffff 198px, transparent 198px), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
   background-repeat: no-repeat;
   background-color: #29530f;
   background-position: 50% 0;
@@ -15,7 +15,7 @@
 
 @media (min-width: $desktop-width) {
   .promo-outer {
-    background-image: linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+    background-image: linear-gradient(to top, #ffffff 80px, transparent 80px), linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
     background-position: top right;
   }
 }
