--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -1,8 +1,36 @@
+.workflow {
+  box-sizing: border-box;
+  padding-top: 6px;
+  padding-bottom: 50px;
+}
+
+@media (min-width: $tablet-width) {
+  .workflow {
+    padding-top: 35px;
+    padding-bottom: 25px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .workflow {
+    padding-top: 60px;
+    padding-bottom: 25px;
+  }
+}
+
 .workflow__title {
+  padding: 0;
+  margin: 0 0 42px 0;
   font-weight: 400;
 
   @include line-height(36, 40, 60, 60);
   @include font-size(36, 60);
+}
+
+@media (min-width: $tablet-width) {
+  .workflow__title {
+    margin: 0 0 71px 0;
+  }
 }
 
 .workflow__list {
@@ -17,7 +45,7 @@
   .workflow__list {
     grid-template-columns: repeat(2, 1fr);
     row-gap: 37px;
-    column-gap: 23%;
+    column-gap: 8%;
   }
 }
 
@@ -25,15 +53,7 @@
   .workflow__list {
     grid-template-columns: repeat(4, 1fr);
     row-gap: 15px;
-    column-gap: 20px;
-  }
-}
-
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
-  .workflow__list {
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 37px;
-    column-gap: 23%;
+    column-gap: 80px;
   }
 }
 
@@ -55,22 +75,32 @@
     background-color: $color__green;
     background-repeat: no-repeat;
     background-position: center;
+    color: $color__dark-grey;
   }
 
   &::after {
     position: absolute;
-    left: 30px;
-    top: 0;
+    top: -40px;
+    left: 115px;
+    z-index: -1;
+    display: flex;
+    width: 150px;
+    height: 150px;
+    padding: 0;
+    margin: 0;
     counter-increment: li;
     content: counter(li);
     font-weight: inherit;
     color: #f2f2f2;
-    z-index: -1;
-    font-size: 16px;
-    display: flex;
-    width: 150px;
-    padding: 0;
-    margin: 0;
+    font-family: $font__main;
+    font-size: 280px;
+    line-height: 17.5rem;
+  }
+}
+
+@media (max-width: $tablet-width - 1px) {
+  .workflow__item br {
+    display: none;
   }
 }
 
@@ -78,8 +108,7 @@
   .workflow__item {
     display: block;
     box-sizing: border-box;
-    padding-left: 80px;
-    padding-bottom: 20px;
+    padding: 3px 5px 0 80px;
     min-height: 60px;
 
     &::before {
@@ -93,9 +122,33 @@
 @media (min-width: $tablet-width) {
   .workflow__item {
     flex-direction: column;
-    height: 280px;
+    min-height: 156px;
+    padding: 113px 65px 10px 0;
+    width: 80%;
 
     &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin-bottom: 20px;
+      width: 80px;
+      height: 80px;
+    }
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .workflow__item {
+    flex-direction: column;
+    min-height: 156px;
+    padding: 113px 65px 10px 0;
+    width: 100%;
+
+    &::before {
+      position: absolute;
+      top: 0;
+      left: 0;
+      margin-bottom: 20px;
       width: 80px;
       height: 80px;
     }
@@ -118,3 +171,10 @@
 .workflow__item--profit::before {
   background-image: url("../img/svg/icon_alarm.svg");
 }
+
+/*
+@media (min-width: $tablet-width) {
+  .workflow__item::after {
+  }
+}
+*/
