--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,10 +2,10 @@
 @import "./global/variables.scss";
 @import "./global/styles-global.scss";
 @import "./global/mixins.scss";
+@import "./global/block-container.scss";
 
 //fonts
 @import "./global/fonts.scss";
-@import "./global/block-container.scss";
 
 //blocks
 @import "./blocks/page.scss";
@@ -23,7 +23,7 @@
 @import "./blocks/demo-inner.scss";
 @import "./blocks/demo-cat.scss";
 @import "./blocks/slider-images.scss";
-@import "./blocks/control";
+@import "./blocks/control.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts-outer.scss";
 @import "./blocks/contacts.scss";
@@ -31,10 +31,16 @@
 @import "./blocks/footer-logo.scss";
 @import "./blocks/footer-inner.scss";
 @import "./blocks/social.scss";
-@import "blocks/academy-logo";
+@import "./blocks/academy-logo.scss";
+@import "./blocks/catalog.scss";
+@import "./blocks/catalog-inner.scss";
 @import "./blocks/product.scss";
+@import "./blocks/product-block-outer.scss";
 @import "./blocks/product-block.scss";
-@import "./blocks/additives.scss";
+@import "blocks/additives.scss";
+@import "blocks/additive-wrapper";
+@import "blocks/additive.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
 @import "./blocks/form.scss";
+@import "./blocks/form-group.scss";
