--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,29 +1,59 @@
-.catalog__title {
-  grid-column: 1 / -1;
-  padding: 0 20px;
-  font-weight: 400;
-
-  @include line-height(36,36,60,60);
-  @include font-size(36,60);
+.catalog {
+  margin-bottom: 22px;
 }
 
-@media (max-width: $tablet-width) {
-  .catalog__title {
-    padding-top: 10px;
-    border-top: 1px solid #ebebeb;
+@media (min-width: $tablet-width) {
+  .catalog {
+    padding-bottom: 30px;
+    margin-bottom: 35px;
   }
 }
 
-/*
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
+.catalog__title {
+  grid-column: 1 / -1;
+  padding-top: 28px;
+  padding-bottom: 39px;
+  border-top: 1px solid #ebebeb;
+  font-weight: 400;
+  margin: 0;
+
+  @include line-height(36, 36, 60, 60);
+  @include font-size(36, 60);
+}
+
+@media (min-width: $tablet-width) {
   .catalog__title {
-    padding: 0 30px;
+    margin-top: 22px;
+    margin-bottom: 123px;
+    border: none;
   }
 }
 
 @media (min-width: $desktop-width) {
   .catalog__title {
-    padding: 0 40px;
+    margin-top: 43px;
+    margin-bottom: 126px;
+    border: none;
   }
 }
-*/
+
+.catalog__products {
+  @include reset-list;
+}
+
+@media (min-width: $tablet-width) {
+  .catalog__products {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 8%;
+    row-gap: 139px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .catalog__products {
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 6%;
+    row-gap: 140px;
+  }
+}
