--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -1,22 +1,44 @@
 .product-block {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  padding-bottom: 20px;
+  row-gap: 10px;
+  padding-bottom: 23px;
+  padding-top: 21px;
 }
 
-@media (max-width: $tablet-width) {
-  .product-block {
-    padding-left: 20px;
-    padding-right: 20px;
+@media (max-width: $tablet-width - 1px) {
+  .product-block::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: block;
+    width: 100vw;
+    height: 1px;
+    content: "";
+    background-color: #ebebeb;
+  }
+}
+
+@media (max-width: $tablet-width - 1px) {
+  .product-block::after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    display: block;
+    width: 100vw;
+    height: 1px;
+    content: "";
+    background-color: #ebebeb;
   }
 }
 
 @media (min-width: $tablet-width) {
   .product-block {
     grid-template-columns: 1fr;
-    height: 430px;
     background-color: $color__grey;
-    padding: 0 36px 20px 36px;
+    padding: 0 36px 37px 36px;
   }
 }
 
@@ -26,21 +48,54 @@
 }
 
 .product-block--more {
+  padding-top: 72px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   background-color: $color__white;
-  border: 2px solid $color__grey;
+  border-top: 2px solid $color__grey;
+  border-bottom: 2px solid $color__grey;
 }
 
-@media (max-width: $tablet-width) {
+@media (min-width: $tablet-width) {
   .product-block--more {
+    padding-top: 85px;
     border: 2px solid $color__grey;
   }
 }
 
+.product-block__title {
+  font-weight: 400;
+
+  @include line-height(16,20,20,22);
+  @include font-size(16,20);
+}
+
 .product-block__title--more {
+  margin: 0 0 0 0;
   text-transform: uppercase;
+}
+
+@media (min-width: $tablet-width) {
+  .product-block__title--more {
+    width: 70%;
+    margin-top: 77px;
+    margin-bottom: 13px;
+  }
+}
+
+.product-block__description {
+  margin: 0 0 11px 0;
+  font-family: $font__standard;
+
+  @include line-height(12,16,16,18);
+  @include font-size(12,16);
+}
+
+@media (min-width: $tablet-width) {
+  .product-block__description {
+    width: 70%;
+  }
 }
