--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,8 +1,13 @@
+/*//sass includes
+@use "./sass:math";*/
+
 //global values
 @import "./global/variables.scss";
 @import "./global/visually-hidden.scss";
-@import "./global/mixins.scss";
 @import "./global/block-container.scss";
+
+//mixins
+@import "./global/mixins.scss";
 
 //fonts
 @import "./global/fonts.scss";
@@ -23,7 +28,7 @@
 @import "./blocks/demo-inner.scss";
 @import "./blocks/demo-cat.scss";
 @import "./blocks/demo-slider.scss";
-@import "blocks/demo-slider";
+@import "./blocks/demo-slider";
 @import "./blocks/control.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts-outer.scss";
@@ -34,14 +39,13 @@
 @import "./blocks/social.scss";
 @import "./blocks/academy-logo.scss";
 @import "./blocks/catalog.scss";
-@import "./blocks/catalog-inner.scss";
 @import "./blocks/product.scss";
-@import "./blocks/product-block-outer.scss";
 @import "./blocks/product-block.scss";
 @import "./blocks/additives.scss";
 @import "./blocks/addons.scss";
-@import "./blocks/additive.scss";
+@import "./blocks/addons-inner.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
 @import "./blocks/form.scss";
 @import "./blocks/form-group.scss";
+@import "./blocks/extra.scss";
